# runite

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  mise.toml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/skills/cop/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: io.rs  primitives.rs  runtime.rs
benches/common/: mod.rs
cop-checks/: abstraction-layers.cop  main.cop  module-size.cop  oversized-types.cop  single-module-crate.cop
docs/: RELEASE_PLAN.md  ROADMAP.md  WINDOWS.md  public-api.md
examples/: async_fs_showcase.rs  background_workers.rs  broadcast_watch.rs  build_pipeline.rs  channel_showcase.rs  chat_server.rs  command_center.rs  frame_loop_embedding.rs  hyper_http_client.rs  main_result.rs  reactive_state.rs  runtime_loop_showcase.rs  subprocess_pipeline.rs  tcp_echo_server.rs
proc_macros/: Cargo.toml  README.md
proc_macros/src/: lib.rs
src/: fd.rs  fs.rs  hyper_rt.rs  lib.rs  stdio.rs  task.rs  time.rs
src/channel/: broadcast.rs  mod.rs  mpsc.rs  oneshot.rs  watch.rs
src/io/: buf.rs  compat.rs  ext.rs  mod.rs  stream.rs  traits.rs
src/macros/: mod.rs
src/net/: hyper_impl.rs  interop.rs  mod.rs  unix.rs
src/op/: completion.rs  fs.rs  mod.rs  net.rs
src/os/: mod.rs
src/os/windows/: fs.rs  mod.rs
src/platform/: mod.rs
src/platform/linux/: driver.rs  mod.rs  runtime.rs  uring.rs
src/platform/linux_x86_64/: driver.rs  runtime.rs  uring.rs
src/platform/macos_aarch64/: driver.rs  runtime.rs
src/platform/runtime_shared/: driver_backend.rs  future_task.rs  handles.rs  mod.rs  scheduler.rs  state.rs  test_support.rs  timer.rs
src/platform/windows/: driver.rs  runtime.rs
src/process/: child.rs  command.rs  mod.rs  pipe.rs  status.rs
src/signal/: mod.rs  unix.rs  windows.rs
src/sync/: mod.rs  mutex.rs  notify.rs  once_cell.rs  rw_lock.rs  semaphore.rs
src/sys/: blocking.rs  handle.rs  mod.rs
src/sys/linux/: channel.rs  fd.rs  fs.rs  mod.rs  net.rs  process.rs
src/sys/macos/: channel.rs  fd.rs  fs.rs  mod.rs  net.rs  process.rs
src/sys/windows/: channel.rs  fs.rs  mod.rs  net.rs  overlapped.rs  process.rs
src/task/: join_set.rs
tests/: block_on.rs  cancellation.rs  channel.rs  concurrency.rs  event_loop_order.rs  fd_interop.rs  fs.rs  fs_metadata.rs  hyper_rt.rs  io_compat.rs  io_copy.rs  io_streams.rs  macros.rs  microtask_starvation.rs  net.rs  net_extra.rs  panic_isolation.rs  process.rs  reentrancy.rs  unix_stream.rs  waker.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
