[package]
name = "runite-proc-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros (#[runite::main]) for the runite async runtime. Use via the runite crate; not intended for direct consumption."
license = "MIT OR Apache-2.0"
repository = "https://github.com/willmtemple/runite"
documentation = "https://docs.rs/runite-proc-macros"
readme = "README.md"
keywords = ["async", "runtime", "macro", "proc-macro", "runite"]
categories = ["asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
